# mcp_redactionnel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: NETTOYAGE_HTML.md
mcp_redactionnel/: __init__.py  api.py  config.py  prompts.yaml  providers.py  service.py
scripts/: check_openapi.py  preview_clean.py  redact.py  run_server.sh  test_final_cleaning.py
tests/: test_html_cleaning.py  test_redaction.py  test_service.py
